Add part one of about section

--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -2,7 +2,7 @@
   max-width: $grid-width;
   margin: 0 auto;
   // background-color: steelblue;
-  color: #fff;
+  color: $color-dark;
  
 
   &:not(:last-child) {
