--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,11 +1,14 @@
 $color-primary: #55c57a;
 $color-primary-light: #7ed56f;
 $color-primary-dark: #28b485;
-$color-yellow: #ffc600;
 $color-dark: #272727;
 $color-gray-dark: #777;
 $color-black: #000;
 $color-grey-light-1: #f7f7f7;
+$color-white: #fff;
+
+// Font SIZE
+$default-font-size: 1.6rem;
 
 // Grid Layout
 $grid-width: 114rem;
