--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -42,9 +42,22 @@
   &:hover
 {
     transform: skewY(2deg) skewX(15deg) scale(1.1);
+    text-shadow: 0.5rem 1rem 2rem rgba($color-black, 0.2);
     -webkit-transform: skewY(2deg) skewX(15deg) scale(1.1);
     -moz-transform: skewY(2deg) skewX(15deg) scale(1.1);
     -ms-transform: skewY(2deg) skewX(15deg) scale(1.1);
     -o-transform: skewY(2deg) skewX(15deg) scale(1.1);
+  }
 }
+.heading-tertiary {
+  font-size: $default-font-size;
+  font-weight: 700;
+  text-transform: uppercase;
 }
+.paragraph {
+  font-size: $default-font-size;
+  &:not(:last-child) {
+    margin-bottom: 3rem;
+  }
+}
+
