--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,7 @@ body {
   -o-transition: all .2s; }
   .heading-secondary:hover {
     transform: skewY(2deg) skewX(15deg) scale(1.1);
+    text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2);
     -webkit-transform: skewY(2deg) skewX(15deg) scale(1.1);
     -moz-transform: skewY(2deg) skewX(15deg) scale(1.1);
     -ms-transform: skewY(2deg) skewX(15deg) scale(1.1);
@@ -142,6 +143,49 @@ body {
 
 .u-margin-bottom-large {
   margin-bottom: 8rem; }
+
+.composition {
+  position: relative; }
+  .composition__photo {
+    width: 55%;
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
+    border-radius: 2px;
+    position: absolute;
+    transition: all .2s;
+    z-index: 10;
+    outline-offset: 2rem;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    -ms-border-radius: 2px;
+    -o-border-radius: 2px;
+    -webkit-transition: all .2s;
+    -moz-transition: all .2s;
+    -ms-transition: all .2s;
+    -o-transition: all .2s; }
+    .composition__photo--p1 {
+      left: 0;
+      top: -2rem; }
+    .composition__photo--p2 {
+      right: 0;
+      top: 2rem; }
+    .composition__photo--p3 {
+      left: 20%;
+      top: 10rem; }
+    .composition__photo:hover {
+      outline: 1.5rem solid #55c57a;
+      transform: scale(1.05) translateY(0.5rem);
+      box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
+      z-index: 20;
+      -webkit-transform: scale(1.05) translateY(0.5rem);
+      -moz-transform: scale(1.05) translateY(0.5rem);
+      -ms-transform: scale(1.05) translateY(0.5rem);
+      -o-transform: scale(1.05) translateY(0.5rem); }
+  .composition:hover .composition__photo:not(:hover) {
+    transform: scale(0.95);
+    -webkit-transform: scale(0.95);
+    -moz-transform: scale(0.95);
+    -ms-transform: scale(0.95);
+    -o-transform: scale(0.95); }
 
 .btn {
   /* Sudo Button */ }
