--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,54 +1,61 @@
 .btn {
   &:link,
   &:visited {
-  text-transform: uppercase;
-  text-decoration: none;
-  padding: 1.5rem 4rem;
-  display: inline-block;
-  border-radius: 10rem;
-  transition: all 0.2s;
-  position: relative;
-  font-size: $default-font-size;
-  -webkit-border-radius: 10rem;
-  -moz-border-radius: 10rem;
-  -ms-border-radius: 10rem;
-  -o-border-radius: 10rem;
-  -webkit-transition: all 0.2s;
-  -moz-transition: all 0.2s;
-  -ms-transition: all 0.2s;
-  -o-transition: all 0.2s;
-}
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 1.5rem 4rem;
+    display: inline-block;
+    border-radius: 10rem;
+    transition: all 0.2s;
+    position: relative;
+    font-size: $default-font-size;
+    -webkit-border-radius: 10rem;
+    -moz-border-radius: 10rem;
+    -ms-border-radius: 10rem;
+    -o-border-radius: 10rem;
+    -webkit-transition: all 0.2s;
+    -moz-transition: all 0.2s;
+    -ms-transition: all 0.2s;
+    -o-transition: all 0.2s;
+  }
   &:hover {
-  transform: translateY(-3px);
-  -webkit-transform: translateY(-3px);
-  box-shadow: 0 10px 20px rgba($color-black, 0.2);
-  -moz-transform: translateY(-3px);
-  -ms-transform: translateY(-3px);
-  -o-transform: translateY(-3px);
-  &::after {
-    transform: scaleX(1.4) scaleY(1.6);
-    opacity: 0;
-    -webkit-transform: scaleX(1.4) scaleY(1.6);
-    -moz-transform: scaleX(1.4) scaleY(1.6);
-    -ms-transform: scaleX(1.4) scaleY(1.6);
-    -o-transform: scaleX(1.4) scaleY(1.6);
+    transform: translateY(-3px);
+    -webkit-transform: translateY(-3px);
+    box-shadow: 0 10px 20px rgba($color-black, 0.2);
+    -moz-transform: translateY(-3px);
+    -ms-transform: translateY(-3px);
+    -o-transform: translateY(-3px);
+    &::after {
+      transform: scaleX(1.4) scaleY(1.6);
+      opacity: 0;
+      -webkit-transform: scaleX(1.4) scaleY(1.6);
+      -moz-transform: scaleX(1.4) scaleY(1.6);
+      -ms-transform: scaleX(1.4) scaleY(1.6);
+      -o-transform: scaleX(1.4) scaleY(1.6);
+    }
   }
-}
-  &:active {
-  transform: translateY(-.1rem);
-  box-shadow: 0px .5rem 1rem rgba(0,0,0,.2);
-  -webkit-transform: translateY(-.1rem);
-  -moz-transform: translateY(-.1rem);
-  -ms-transform: translateY(-.1rem);
-  -o-transform: translateY(-.1rem);
-}
+    &:active {
+      transform: translateY(-.1rem);
+      box-shadow: 0px .5rem 1rem rgba(0,0,0,.2);
+      -webkit-transform: translateY(-.1rem);
+      -moz-transform: translateY(-.1rem);
+      -ms-transform: translateY(-.1rem);
+      -o-transform: translateY(-.1rem);
+  }
   &--white {
-  background-color: #fff;
+  background-color: $color-white;
   color: $color-gray-dark;
-  &::after {
-    background-color: #fff;
+    &::after {
+      background-color: $color-white;
+    }
   }
-}
+
+  &--green {
+    background-color: $color-primary;
+    color: $color-white;
+    &::after {
+      background-color: $color-primary;
+  }
 /* Sudo Button */
   &::after {
   content: "";
@@ -109,5 +116,6 @@
     -moz-transform: translateY(0);
     -ms-transform: translateY(0);
     -o-transform: translateY(0);
+  }
 }
 }
