--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,7 @@
 @import "components/feature-box";
 @import "components/composition";
 @import "components/button";
+@import "components/card";
 
 
 @import "layout/grid";
