--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -2,10 +2,10 @@
   text-align: center;
 }
 .u-margin-bottom-small {
-  margin-bottom: 1.5rem
+  margin-bottom: 1.5rem;
 }
 .u-margin-bottom-small {
-  margin-bottom: 4rem
+  margin-bottom: 4rem;
 }
 .u-margin-bottom-large {
   margin-bottom: 8rem;
